--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=test
 
-spring.jpa.open-in-view=false
+#Permitir que as transações continuem abertas após a camada de serviços
+#Caso false, as transações se encerram na camada de services
+spring.jpa.open-in-view=false 
