--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
 
 #Permitir que as transações continuem abertas após a camada de serviços
 #Caso false, as transações se encerram na camada de services
-spring.jpa.open-in-view=false 
+spring.jpa.open-in-view=false
+
+security.oauth2.client.client-id=${CLIENT_ID:dscatalog}
+security.oauth2.client.client-secret=${CLIENT_SECRET:dscatalog123}
+
+jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
+jwt.duration=${JWT_DURATION:86400}
